--- a/conf/ignore_files.toml
+++ b/conf/ignore_files.toml
@@ -27,8 +27,10 @@ directories = [
     ".idea",
 ]
 extensions = [
+    ".iml",
+    ".lock",
     ".cache",
-    #".cfg",
+    ".cfg",
     ".cert",
     ".class",
     ".config",
@@ -65,12 +67,12 @@ extensions = [
     ".sublime-*",
     ".sum",
     ".swp",
-    #".toml",
+    ".toml",
     ".tsv",
     ".txt",
     ".xml",
-    #".yaml",
-    #".yml",
+    ".yaml",
+    ".yml",
     ".zip",
     ".xlsx",
     ".xls",
@@ -98,8 +100,14 @@ extensions = [
     ".jar",
     ".pro",
     ".apk",
+    ".sample",
 ]
 files = [
+    "AUTHORS",
+    "CHANGELOG",
+    "toml",
+    "init.py",
+    "__init__.py",
     ".babelrc",
     ".editorconfig",
     "test_binary",
