--- a/conf/language_setup.toml
+++ b/conf/language_setup.toml
@@ -1,43 +1,43 @@
 # Programming language setup and run instructions
 
 [language_setup]
-C = ["gcc -o myapp main.c", "./myapp"]
-CPP = ["g++ -o myapp main.cpp", "./myapp"]
-CSharp = ["dotnet build", "dotnet run"]
-CoffeeScript = ["npm install", "coffee main.coffee"]
-Crystal = ["shards install", "./main"]
-D = ["dmd main.d", "./main"]
-Dart = ["pub get", "dart main.dart"]
-Delphi = ["dcc32 main.dpr", "main.exe"]
-Elixir = ["mix deps.get", "mix run"]
-FS = ["dotnet build", "dotnet run"]
-Go = ["go build -o myapp", "./myapp"]
-Groovy = ["grape install", "groovy main.groovy"]
-Haskell = ["ghc -o myapp main.hs", "./myapp"]
-Java = ["mvn clean install", "java -jar target/myapp.jar"]
-JavaScript = ["npm install", "node app.js"]
-Julia = ["julia --project -e 'import Pkg; Pkg.instantiate()'", "julia main.jl"]
-JupyterNotebook = ["pip install -r requirements.txt", "jupyter nbconvert --execute notebook.ipynb"]
-Kotlin = ["gradle build", "java -jar build/libs/myapp.jar"]
-Lua = ["luarocks install --only-deps myapp", "lua main.lua"]
-MATLAB = ["matlab -r main.m"]
-ObjectiveC = ["gcc -framework Foundation main.m -o myapp", "./myapp"]
-ObjectScript = ["zpm install", "do ##class(User.MyClass).Main()"]
-Perl = ["cpanm --installdeps .", "perl main.pl"]
-Perl6 = ["zef install .", "perl6 main.p6"]
-PHP = ["composer install", "php main.php"]
-PowerShell = ["pwsh main.ps1"]
-Prolog = ["swipl -g main -t halt -q main.pl"]
-Python = ["pip install -r requirements.txt", "python main.py"]
-R = ["Rscript install.R", "Rscript main.R"]
-Raku = ["zef install .", "raku main.raku"]
-Ruby = ["bundle install", "ruby main.rb"]
-Rust = ["cargo build", "cargo run"]
-Scala = ["sbt compile", "sbt run"]
-Scheme = ["csi -s main.scm"]
-Shell = ["chmod +x main.sh", "./main.sh"]
-Swift = ["swift build", ".build/debug/myapp"]
-TypeScript = ["npm install", "npm run build && node dist/main.js"]
-VBScript = ["cscript main.vbs"]
-VisualBasic = ["dotnet build", "dotnet run"]
-vue = ["npm install", "npm run serve"]
+C = ["gcc -o myapp main.c", "./myapp", "/* No common unit test framework in C */"]
+CPP = ["g++ -o myapp main.cpp", "./myapp", "/* Add specific testing command here */"]
+CSharp = ["dotnet build", "dotnet run", "dotnet test"]
+CoffeeScript = ["npm install", "coffee main.coffee", "npm test"]
+Crystal = ["shards install", "./main", "crystal spec"]
+D = ["dmd main.d", "./main", "rdmd -main -unittest main.d"]
+Dart = ["pub get", "dart main.dart", "dart test"]
+Delphi = ["dcc32 main.dpr", "main.exe", "/* Add specific testing command here */"]
+Elixir = ["mix deps.get", "mix run", "mix test"]
+FS = ["dotnet build", "dotnet run", "dotnet test"]
+Go = ["go build -o myapp", "./myapp", "go test"]
+Groovy = ["grape install", "groovy main.groovy", "/* Add specific testing command here */"]
+Haskell = ["ghc -o myapp main.hs", "./myapp", "/* Add specific testing command here */"]
+Java = ["mvn clean install", "java -jar target/myapp.jar", "mvn test"]
+JavaScript = ["npm install", "node app.js", "npm test"]
+Julia = ["julia --project -e 'import Pkg; Pkg.instantiate()'", "julia main.jl", "julia -e 'import Pkg; Pkg.test()'"]
+JupyterNotebook = ["pip install -r requirements.txt", "jupyter nbconvert --execute notebook.ipynb", "pytest notebook_test.py"]
+Kotlin = ["gradle build", "java -jar build/libs/myapp.jar", "gradle test"]
+Lua = ["luarocks install --only-deps myapp", "lua main.lua", "/* Add specific testing command here */"]
+MATLAB = ["matlab -r main.m", "matlab -batch 'runtests'"]
+ObjectiveC = ["gcc -framework Foundation main.m -o myapp", "./myapp", "/* Add specific testing command here */"]
+ObjectScript = ["zpm install", "do ##class(User.MyClass).Main()", "do ##class(%UnitTest.Manager).RunTest()"]
+Perl = ["cpanm --installdeps .", "perl main.pl", "prove"]
+Perl6 = ["zef install .", "perl6 main.p6", "prove6"]
+PHP = ["composer install", "php main.php", "vendor/bin/phpunit"]
+PowerShell = ["pwsh main.ps1", "pwsh -Command {Invoke-Pester}"]
+Prolog = ["swipl -g main -t halt -q main.pl", "/* Add specific testing command here */"]
+Python = ["pip install -r requirements.txt", "python main.py", "pytest"]
+R = ["Rscript install.R", "Rscript main.R", "Rscript -e 'devtools::test()'"]
+Raku = ["zef install .", "raku main.raku", "prove6"]
+Ruby = ["bundle install", "ruby main.rb", "rspec"]
+Rust = ["cargo build", "cargo run", "cargo test"]
+Scala = ["sbt compile", "sbt run", "sbt test"]
+Scheme = ["csi -s main.scm", "/* No common unit test framework in Scheme */"]
+Shell = ["chmod +x main.sh", "./main.sh", "bats *.bats"]
+Swift = ["swift build", ".build/debug/myapp", "swift test"]
+TypeScript = ["npm install", "npm run build && node dist/main.js", "npm test"]
+VBScript = ["cscript main.vbs", "/* No common unit test framework in VBScript */"]
+VisualBasic = ["dotnet build", "dotnet run", "dotnet test"]
+vue = ["npm install", "npm run serve", "npm test"]
