--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,38 @@
+[tool.poetry]
+name = "readme-ai"
+version = "0.1.0"
+description = "🚀 Generate awesome README files from the terminal, powered by OpenAI's GPT language model APIs 💫"
+authors = ["Eli <43382407+eli64s@users.noreply.github.com>"]
+license = "MIT"
+readme = "README.md"
+packages = [{include = "src"}]
+
+[tool.poetry.dependencies]
+python = "^3.8"
+pandas = "^1.4.0"
+black = "21.9b0"
+click = "8.0.1"
+colorlog = "^6.7.0"
+cachetools = "^5.3.1"
+dacite = "^1.8.1"
+gitpython = "^3.1.31"
+httpx = "^0.24.1"
+h2 = "^4.1.0"
+pre-commit = "2.15.0"
+pyyaml = "^6.0"
+pytest = "^7.3.2"
+pytest-cov = "^4.1.0"
+responses = "^0.23.1"
+setuptools = "^68.0.0"
+tabulate = "^0.9.0"
+tenacity = "^8.2.2"
+tiktoken = "^0.4.0"
+openai = "^0.27.8"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 # Autoflake
 [tool.autoflake]
 ignore_pass_statements = true
@@ -16,8 +51,8 @@ line-length = 88
 include = '\.pyi?$'
 exclude = '''
 /(
-      .eggs     
-    | .git         
+      .eggs
+    | .git
     | .hg
     | .mypy_cache
     | .pytest_cache
