--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "🚀 Generate awesome README files from the terminal, powered by 
 authors = ["Eli <43382407+eli64s@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/eli64s/README-AI"
-documentation = "https://github.com/eli64s/README-AI/blob/main/README.md"
+homepage = "https://github.com/eli64s/readme-ai"
+documentation = "https://github.com/eli64s/readme-ai/blob/main/README.md"
 keywords = [
     "markdown",
     "readme",
@@ -31,7 +31,6 @@ keywords = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pandas = "^1.4.0"
 black = "21.9b0"
 click = "8.0.1"
 colorlog = "^6.7.0"
