Update project metadata in setup files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,33 @@
 [tool.poetry]
 name = "readme-ai"
-version = "0.0.1"
-description = "🚀 Generate awesome README files from the terminal, powered by OpenAI's GPT language model APIs 💫"
+version = "0.0.2"
+description = """🚀 Generate awesome README.md files from the terminal, powered by OpenAI's GPT language model APIs 💫"""
 authors = ["Eli <43382407+eli64s@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://github.com/eli64s/readme-ai/blob/main/README.md"
 keywords = [
-    "markdown",
-    "readme",
-    "readme-badges",
-    "documentation-generator",
-    "markdown-generator",
-    "automated-documentation",
-    "awesome-readme",
-    "readme-generator",
-    "python-ai",
-    "gpt-3",
-    "openai-api",
-    "shieldsio-badges",
-    "gpt-4",
-    "llms",
-    "openai-python",
-    "chatgpt-python",
-    "llmops",
-    "openai-chatbot",
-    "gpt-35-turbo",
+  "readme",
+  "readme-badges",
+  "readme-template",
+  "autodoc",
+  "readme-boilerplate",
+  "awesome-readme",
+  "readme-generator",
+  "gpt-3",
+  "readme-stats",
+  "openai-api",
+  "auto-readme",
+  "ai-tools",
+  "shieldsio-badges",
+  "gpt-4",
+  "llms",
+  "openai-python",
+  "chatgpt-python",
+  "llmops",
+  "openai-chatbot",
+  "gpt-35-turbo",
 ]
 
 [tool.poetry.dependencies]
