--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-black==21.9b0
-click==8.0.1
+black
 colorlog
 cachetools
 dacite
 flake8
-GitPython
+gitpython
 httpx
 h2
 isort
 openai
-pre-commit==2.15.0
-PyYAML
+pre-commit
+pyyaml
 pytest
 pytest-cov
 responses
-setuptools
+ruff
 tabulate
 tenacity
 tiktoken
+toml
