--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
 name = "readme-ai"
 version = "0.0.2"
 description = """🚀 Generate awesome README.md files from the terminal, powered by OpenAI's GPT language model APIs 💫"""
-authors = ["Eli <43382407+eli64s@users.noreply.github.com>"]
+authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
@@ -31,43 +35,64 @@ keywords = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-black = "21.9b0"
-click = "8.0.1"
+python = "^3.8.1"
+black = "^23.3.0"
 colorlog = "^6.7.0"
 cachetools = "^5.3.1"
 dacite = "^1.8.1"
+flake8 = "^6.0.0"
 gitpython = "^3.1.31"
 httpx = "^0.24.1"
 h2 = "^4.1.0"
-pre-commit = "2.15.0"
+isort = "^5.12.0"
+openai = "^0.27.8"
+pre-commit = "^3.3.3"
 pyyaml = "^6.0"
-pytest = "^7.3.2"
+pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 responses = "^0.23.1"
-setuptools = "^68.0.0"
+ruff = "^0.0.275"
 tabulate = "^0.9.0"
 tenacity = "^8.2.2"
 tiktoken = "^0.4.0"
-openai = "^0.27.8"
+toml = "^0.10.2"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.group.lint.dependencies]
+ruff = "*"
+
+[tool.poetry.group.fmt.dependencies]
+black = "*"
+
+[tool.poetry.group.test.dependencies]
+pytest = "*"
 
 [tool.poetry.scripts]
 readme-ai = "src.main:main"
 
-# Autoflake
-[tool.autoflake]
-ignore_pass_statements = true
-ignore-pass-after-docstring = true
-remove_all_unused_imports = true
-recursive = true
+[tool.ruff]
+line-length = 88
+target-version = "py38"
+extend-select = [
+  "I", # isort
+  "N", # pep8-naming
+  "UP", # pyupgrade
+  "RUF", # ruff
+  "B", # flake8-bugbear
+  "C4", # flake8-comprehensions
+  "PTH", # flake8-use-pathlib
+  "SIM", # flake8-simplify
+  "TID", # flake8-tidy-imports
 
-# Autopep8
-[tool.autopep8]
-max-line-length = 88
+]
+extend-ignore = ["RUF005"]
+src = ["src", "tests"]
+
+[tool.ruff.isort]
+force-sort-within-sections = true
+split-on-trailing-comma = false
+
+[tool.ruff.flake8-tidy-imports]
+ban-relative-imports = "all"
 
 # Black
 [tool.black]
@@ -91,10 +116,6 @@ exclude = '''
   )/
 '''
 
-# Flake8
-[flake8]
-max-line-length = 88
-
 # iSort
 [tool.isort]
 profile = "black"
@@ -112,15 +133,11 @@ addopts = "--strict-markers --disable-pytest-warnings"
 
 # Pytest Coverage
 [tool.coverage.run]
-omit = [
-    "tests/*",
-    "setup.py",
-    "*/__init__.py"
-]
+omit = ["tests/*", "setup.py", "*/__init__.py"]
 
 # Yapf
 [tool.yapf]
-based_on_style = "google"
+based_on_style = "pep8"
 column_limit = 88
 indent_width = 4
 dedent_closing_brackets = true
