--- a/conf/conf.toml
+++ b/conf/conf.toml
@@ -4,14 +4,14 @@ endpoint = "https://api.openai.com/v1/chat/completions"
 engine = "gpt-3.5-turbo"
 encoding = "cl100k_base"
 rate_limit = 5
-tokens = 699
+tokens = 600
 tokens_max = 4000
 temperature = 0.9
 
 # Repository
 [git]
-name = "readme-ai"
 repository = "https://github.com/eli64s/readme-ai"
+name = "readme-ai"
 
 # Paths
 [paths]
@@ -20,38 +20,37 @@ dependency_files = "dependency_files.toml"
 ignore_files = "ignore_files.toml"
 language_names = "language_names.toml"
 language_setup = "language_setup.toml"
-readme = "readme_ai.md"
+readme = "readme-ai.md"
 
 # Prompts
 [prompts]
 code_summary = """Offer a comprehensive summary that encapsulates the core functionalities of the provided code snippet:
-\n{}\n
-Aim for precision and conciseness in your explanation, ensuring a fine balance between detail and brevity.
+\n{}\n Aim for precision and conciseness in your explanation, ensuring a fine balance between detail and brevity.
 Limit your response to a maximum of 350 characters (including spaces).
 """
-features = """Hello! Please analyze the codebase located at {} and provide a list of important features. The following includes a list of the summaries of the files in the repository:
-\n{}\n
-Please consider the codebase as a whole and highlight its key characteristics, design patterns, architectural decisions, and any other noteworthy elements.
+features = """Hello! Analyze the Git codebase {} and create a robust summary of the project's features.
+The following information summarizes each file in the repository to help you get started: \n{}\n
+Please provide a comprehensive technical analysis of the codebase and its components.
+Consider the codebase as a whole and highlight the key characteristics, design patterns, architectural decisions, and any other noteworthy elements.
 Generate your response as a Markdown table with the following columns:
 
 | Feature                | Description                           |
 | ---------------------- | ------------------------------------- |
-| **⚙️ Architecture**    | Analyze the structural design of the system here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **📖 Documentation**   | Discuss the quality and comprehensiveness of the documentation here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **🔗 Dependencies**    | Examine the external libraries or other systems that this system relies on here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **🧩 Modularity**      | Discuss the system's organization into smaller, interchangeable components here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **✔️ Testing**         | Evaluate the system's testing strategies and tools here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **⚡️ Performance**     | 	Analyze how well the system performs, considering speed, efficiency, and resource usage here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **🔐 Security**        | Assess the measures the system uses to protect data and maintain functionality here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **🔀 Version Control** | Discuss the system's version control strategies and tools here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **🔌 Integrations**    | Evaluate how the system interacts with other systems and services here. Limit your response to a maximum of 275 characters (including spaces).    |
-| **📶 Scalability**     | Analyze the system's ability to handle growth here. Limit your response to a maximum of 275 characters (including spaces).    |
+| **⚙️ Architecture**     | Analyze the structural design of the system here. Limit your response to a maximum of 250 (including spaces).    |
+| **📖 Documentation**   | Discuss the quality and comprehensiveness of the documentation here. Limit your response to a maximum of 250 (including spaces).    |
+| **🔗 Dependencies**    | Examine the external libraries or other systems that this system relies on here. Limit your response to a maximum of 250 (including spaces).    |
+| **🧩 Modularity**      | Discuss the system's organization into smaller, interchangeable components here. Limit your response to a maximum of 250 (including spaces).    |
+| **✔️ Testing**          | Evaluate the system's testing strategies and tools here. Limit your response to a maximum of 250 (including spaces).    |
+| **⚡️ Performance**      | Analyze how well the system performs, considering speed, efficiency, and resource usage here. Limit your response to a maximum of 250 (including spaces).    |
+| **🔐 Security**        | Assess the measures the system uses to protect data and maintain functionality here. Limit your response to a maximum of 250 (including spaces).    |
+| **🔀 Version Control** | Discuss the system's version control strategies and tools here. Limit your response to a maximum of 250 (including spaces).    |
+| **🔌 Integrations**    | Evaluate how the system interacts with other systems and services here. Limit your response to a maximum of 250 (including spaces).    |
+| **📶 Scalability**     | Analyze the system's ability to handle growth here. Limit your response to a maximum of 250 (including spaces).    |
 
-Please provide a comprehensive technical analysis of the codebase and its components.
+Thank you for your time and effort!
 """
 overview = """Please analyze the codebase located at {} and provide a robust, yet succinct overview of the rpoject.
-The following includes a list of the summaries of the files in the repository:
-\n{}\n
+The following includes a list of the summaries of the files in the repository: \n{}\n
 Craft 3-4 sentences that encapsulate the core functionalities of the project, its purpose, and its value proposition.
 """
 slogan = "Conceptualize a catchy and memorable slogan for the GitHub project: {}. Limit your response to 80 characters."
@@ -63,8 +62,7 @@ dropdown = """<details closed><summary>{}</summary>\n\n{}\n\n</details>\n"""
 header = """\n<div align="center">
 <h1 align="center">
 <img src="https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/ec559a9f6bfd399b82bb44393651661b08aaf7ba/icons/folder-markdown-open.svg" width="100" />
-<br>
-{}
+<br>{}
 </h1>
 <h3>◦ {}</h3>
 <h3>◦ Developed with the software and tools listed below.</h3>
@@ -72,10 +70,10 @@ header = """\n<div align="center">
 badges = """<p align="center">
 {0}
 </p>
-\n![GitHub top language](https://img.shields.io/github/languages/top/{1}?style&color=5D6D7E)
-![GitHub code size in bytes](https://img.shields.io/github/languages/code-size/{1}?style&color=5D6D7E)
-![GitHub commit activity](https://img.shields.io/github/commit-activity/m/{1}?style&color=5D6D7E)
-![GitHub license](https://img.shields.io/github/license/{1}?style&color=5D6D7E)
+<img src="https://img.shields.io/github/languages/top/{1}?style&color=5D6D7E" alt="GitHub top language" />
+<img src="https://img.shields.io/github/languages/code-size/{1}?style&color=5D6D7E" alt="GitHub code size in bytes" />
+<img src="https://img.shields.io/github/commit-activity/m/{1}?style&color=5D6D7E" alt="GitHub commit activity" />
+<img src="https://img.shields.io/github/license/{1}?style&color=5D6D7E" alt="GitHub license" />
 </div>
 \n---
 """
@@ -101,11 +99,9 @@ intro = """
 \n{}
 \n---
 """
-# \n<img src="https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/ec559a9f6bfd399b82bb44393651661b08aaf7ba/icons/folder-github-open.svg" width="80" />
 tree = """
 \n## 📂 Project Structure\n
 """
-# \n<img src="https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/ec559a9f6bfd399b82bb44393651661b08aaf7ba/icons/folder-src-open.svg" width="80" />
 modules = """
 \n---
 \n## 🧩 Modules
@@ -117,7 +113,7 @@ setup = """---
 > - `ℹ️ Requirement 1`
 > - `ℹ️ Requirement 2`
 > - `ℹ️ ...`
-\n### 💻 Installation
+\n### 📦 Installation
 \n1. Clone the {0} repository:
 ```sh\ngit clone {1}\n```
 \n2. Change to the project directory:
